GPencil: Array Modifiers causes crash #69364

Closed
opened 2019-08-31 20:09:03 +02:00 by Zachary · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-31 11:22, hash: 82ef1edce4

Short description of error
Adding modifiers on grease pencil causes crash.

Exact steps for others to reproduce the error
1: Add a "Blank" grease pencil
2: Switch to draw mode
3: Draw a single stroke
4: Go back to object mode
5: Add array modifier(or any modifier for that matter)
6: Crash

With .blend provided just add a array modifier.

grease_stroke_crash.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-31 11:22, hash: `82ef1edce4` **Short description of error** Adding modifiers on grease pencil causes crash. **Exact steps for others to reproduce the error** 1: Add a "Blank" grease pencil 2: Switch to draw mode 3: Draw a single stroke 4: Go back to object mode 5: Add array modifier(or any modifier for that matter) 6: Crash With .blend provided just add a array modifier. [grease_stroke_crash.blend](https://archive.blender.org/developer/F7712197/grease_stroke_crash.blend)
Author

Added subscriber: @AFWS

Added subscriber: @AFWS
Antonio Vazquez self-assigned this 2019-09-01 09:24:34 +02:00
Antonio Vazquez changed title from Modifiers on grease pencil causes crash to GPencil: Array Modifiers causes crash 2019-09-01 09:24:52 +02:00

This issue was referenced by ae43b1d51b

This issue was referenced by ae43b1d51b4a0384c2197a6aca5cd2810c9283ff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69364
No description provided.