Fix T69364: GPencil Array Modifiers causes crash

This bug was introduced when adding the support for default materials.